# VKR_Master

./: .gitignore  README.md  pyproject.toml
scripts/: bench_dual_encoder_zeroshot.sh  bench_second_stage_zeroshot.sh  bench_test_split.sh  create_splits.sh  finetune_dualencoder.sh  finetune_listwise.sh
src/vkr/: __init__.py  analyze_rerank_errors.py  analyze_siglip_similarity.py  ann.py  bench_model.py  encode.py  finetune_dualencoder.py  finetune_listwise.py  preprocessing.py  reranking.py  scoring.py  splits.py  utils.py
