[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vkr"
version = "0.0.1"
authors = [
	{ name="Tkachev Radomir", email="rstkachev@edu.hse.ru" }
]

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss",
    "mlflow",
    "numpy",
    "peft",
    "Pillow",
    "polars",
    "python-dotenv",
    "scikit-learn",
    "torch",
    "tqdm",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["vkr*"]